--- a/nswag/overrade-templates/Client.Class.ProcessResponse.liquid
+++ b/nswag/overrade-templates/Client.Class.ProcessResponse.liquid
@@ -1,4 +1,4 @@
-{% assign exceptions = "401:Server.Core.Exceptions.UnauthorizedException,400:Server.Core.Exceptions.BadRequestException,405:Server.Core.Exceptions.MethodNotAllowedException,412:Server.Core.Exceptions.PreconditionFailedException,413:Server.Core.Exceptions.PayloadTooLargeException,415:Server.Core.Exceptions.UnsupportedMediaTypeException,451:Server.Core.Exceptions.UserException,500:Server.Core.Exceptions.ApiException,501:Server.Core.Exceptions.ApiException,502:Server.Core.Exceptions.BadGatewayException,503:Server.Core.Exceptions.ServiceUnavailableException,504:Server.Core.Exceptions.GatewayTimeoutException" | split: ','%}
+{% assign exceptions = "401:AuthenticationException,400:BadRequestException,405:MethodNotAllowedException,412:PreconditionFailedException,413:PayloadTooLargeException,415:UnsupportedMediaTypeException,451:UserException,500:ApiException,501:ApiException,502:BadGatewayException,503:ServiceUnavailableException,504:GatewayTimeoutException" | split: ','%}
 {% for exception in exceptions %}
     {% assign exceptionObjects = exception | split: ':' %}
     {% if response.StatusCode == exceptionObjects[0] -%}
