--- a/nswag/overrade-templates/Client.Class.ProcessResponse.liquid
+++ b/nswag/overrade-templates/Client.Class.ProcessResponse.liquid
@@ -1,4 +1,4 @@
-{% assign exceptions = "401:AuthenticationException,400:BadRequestException,405:MethodNotAllowedException,412:PreconditionFailedException,413:PayloadTooLargeException,415:UnsupportedMediaTypeException,451:UserException,500:ApiException,501:ApiException,502:BadGatewayException,503:ServiceUnavailableException,504:GatewayTimeoutException" | split: ','%}
+{% assign exceptions = "401:AuthenticationException,400:BadRequestException,404:NotFoundException,405:MethodNotAllowedException,412:PreconditionFailedException,413:PayloadTooLargeException,415:UnsupportedMediaTypeException,451:UserException,500:ApiException,501:ApiException,502:BadGatewayException,503:ServiceUnavailableException,504:GatewayTimeoutException" | split: ','%}
 {% for exception in exceptions %}
     {% assign exceptionObjects = exception | split: ':' %}
     {% if response.StatusCode == exceptionObjects[0] -%}
